# bro-pdf-analyzer

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  README  configure.plugin
cmake/: FindPoDoFo.cmake
scripts/: __load__.bro  __preload__.bro  consts.bro  init.bro  types.bro
scripts/Analyzer/PDF/: __load__.bro  notify.bro
src/: PDF.cc  PDF.h  Plugin.cc  Plugin.h  events.bif  pdf.bif
tests/: btest.cfg
tests/Baseline/pdf.info/: output
tests/Baseline/pdf.show-plugin/: output
tests/Traces/: badversion.pcap  encrypted.pcap  javascript.pcap  js.pcap  version.pcap
tests/pdf/: badversion.bro  encrypted.bro  info.bro  javascript.bro  js.bro  notify.bro  show-plugin.bro  version.bro
